------------------------------------------------------------------------
r2538 | gaser | 2024-02-13 17:37:40

Changed paths:
 M CHANGES.txt
 M cat12.m
 M cat_conf_tools.m
 M cat_stat_check_SPM.m
 M cat_stat_check_cov_old.m
D  resources/settings/MBeautyConfigurationRules.m
D  resources/settings/MBeautyConfigurationRules.xml

Changed: Added old sample homogeneity check to GUI for use with long. data.
Changed: Call old homogeneity check in cat_stat_check_SPM if long. design is found.
------------------------------------------------------------------------
r2537 | gaser | 2024-02-13 13:38:25

Changed paths:
 M CHANGES.txt
 M Contents.m
 M cat_amap.mexa64
 M cat_ornlm.mexa64
 M cat_sanlm.mexa64
 M cat_stat_analyze_ROIs.m
 M cat_vbdist.mexa64
 M cat_vol_downcut.mexa64
 M cat_vol_eidist.mexa64
 M cat_vol_genus0.mexa64
 M cat_vol_gradient3.mexa64
 M cat_vol_interp3f.mexa64
 M cat_vol_laplace3.mexa64
 M cat_vol_laplace3R.mexa64
 M cat_vol_localstat.mexa64
 M cat_vol_median3.mexa64
 M cat_vol_median3c.mexa64
 M cat_vol_pbtp.mexa64
 M cat_vol_simgrow.mexa64
 M check_pipeline/analysis/surface/RPV.dat
 M check_pipeline/analysis/surface/SPM.mat
 M check_pipeline/analysis/surface/spmF_0001.dat
 M check_pipeline/analysis/surface/spmT_0002.dat
 M check_pipeline/analysis/volume/SPM.mat
 M check_pipeline/batch_surface_pipeline.m
 M check_pipeline/batch_volume_pipeline.m
 D check_pipeline/label_orig/catROI_IXI020-Guys-0700-T1.mat
 D check_pipeline/label_orig/catROI_IXI020-Guys-0700-T1.xml
 D check_pipeline/label_orig/catROI_IXI021-Guys-0703-T1.mat
 D check_pipeline/label_orig/catROI_IXI021-Guys-0703-T1.xml
 D check_pipeline/label_orig/catROI_IXI022-Guys-0701-T1.mat
 D check_pipeline/label_orig/catROI_IXI022-Guys-0701-T1.xml
 D check_pipeline/label_orig/catROI_IXI023-Guys-0699-T1.mat
 D check_pipeline/label_orig/catROI_IXI023-Guys-0699-T1.xml
 D check_pipeline/label_orig/catROI_IXI024-Guys-0705-T1.mat
 D check_pipeline/label_orig/catROI_IXI024-Guys-0705-T1.xml